# LinearSeq

./: .gitignore  CMakeLists.txt  README.md
docs/: BACKLOG.md  BUILD_LOG.md  DEV_SETUP.md  FEATURE_LOG.md  PLAN_EVENT_LIST.md  REFACTOR_LOG.md  class_diagram.mermaid
src/: main.cpp
src/audio/: AlsaDriver.cpp  AlsaDriver.h
src/core/: Clock.cpp  Clock.h  Sequencer.cpp  Sequencer.h  Types.h
src/ui/: AppIcon.h  EventList.cpp  EventList.h  LseqMenuButton.cpp  LseqMenuButton.h  MainToolbar.cpp  MainToolbar.h  MainWindow.cpp  MainWindow.h  TrackRowView.cpp  TrackRowView.h  TrackView.cpp  TrackView.h  icon_example.cpp
src/utils/: SmfParser.cpp  SongJson.cpp  SongJson.h
